<resources>
    <string name="app_name">Ekspedisi MLG</string>
    <string name="logo_description">Logo</string>
    <string name="email_label_text">Email</string>
    <string name="email_text_hint">emailmu@mail.com</string>
    <string name="password_label_text">Password</string>
    <string name="password_text_hint">6+ karakter</string>
    <string name="btn_masuk_text">Masuk</string>
    <string name="to_reg_hint_text">Belum memiliki akun ?</string>
    <string name="btn_to_reg_text">Disini</string>
    <string name="lbl_pertanyaan_2">Siapkah untuk bergabung bersama kami ?</string>
    <string name="btn_pengirim_text">Pengirim</string>
    <string name="btn_sopir_text">Sopir</string>
    <string name="gabung_bersama_kami">Gabung bersama kami !</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="email_text">Email</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_register_text">Register</string>
    <string name="copyright_0">©2021 PT. Maju Lancar</string>
    <string name="system_all_rights_reserved">System. All Rights Reserved</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_profil">Profil</string>
    <string name="menu_title_notifikasi">Notifikasi</string>
    <string name="menu_title_pesanan">Pesanan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_profile_text">Informasi Pribadi</string>
    <string name="profile_images_text">profile images</string>
    <string name="lbl_pengaturan_text">DATA PRIBADI</string>
    <string name="setting_icon">setting icon</string>
    <string name="cek_posisi_paket_anda">Cek Posisi Paket Anda</string>
    <string name="ketik_nomor_resi_anda">Ketik Nomor Resi Anda</string>
    <string name="btn_lacak_text">Lacak</string>
    <string name="lbl_riwayat_text">Riwayat</string>
    <string name="lbl_pesan_text">Pesan</string>
    <string name="notif_icon">notif icon</string>
    <string name="cari_berdasarkan_kota_nama">Cari berdasarkan kota / nama</string>
    <string name="cek_tarif">Cek Tarif</string>
    <string name="lokasi_penjemputan">Lokasi Penjemputan</string>
    <string name="lokasi_pengiriman">Lokasi Pengiriman</string>
    <string name="cek">Cek</string>
    <string name="menu">Menu</string>
    <string name="promo">Promo</string>
    <string name="icon_btn_promo">icon btn_promo</string>
    <string name="listongkir">List Ongkir</string>
    <string name="listtarif">List Tarif</string>
    <string name="pesanan">Pesanan</string>
    <string name="tracking">Tracking</string>
    <string name="lokasi_kantor">Lokasi Kantor</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="full_name">Full name</string>
    <string name="yourmail_example_com">yourmail@example.com</string>
    <string name="_081234567890">081234567890</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="password">Password</string>
    <string name="member">Member</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="keluar">Keluar</string>
    <string name="cek_ongkos">Cek Ongkos</string>
    <string name="lokasi_asalmuat">Lokasi Asal Muat</string>
    <string name="lokasi_tujuanmuat">Lokasi Tujuan Muat</string>
    <string name="sudah_dibaca">Sudah Dibaca</string>
    <string name="belum_dibaca">Belum Dibaca</string>
    <string name="lokasi">lokasi</string>
    <string name="tarif">tarif</string>
    <string name="silahkan_isi_form_di_bawah_ini_ndengan_sesuai">Silahkan isi form di bawah ini dengan sesuai !</string>
    <string name="nama_pengirim">Nama Pengirim</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_telpon">Nomor Telpon</string>
    <string name="tanggal_muat">Tanggal Muat</string>
    <string name="lokasi_kirim">Lokasi Kirim</string>
    <string name="catatan">Catatan :</string>
    <string name="daftar">Daftar</string>
    <string name="icon_button">icon button</string>
</resources>