<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/menu_title_home"/>
    <item
        android:id="@+id/pesanan_page"
        android:enabled="true"
        android:icon="@drawable/ic_outline_briefcase"
        android:title="@string/menu_title_pesanan"/>
    <item
        android:id="@+id/notifikasi_page"
        android:enabled="true"
        android:icon="@drawable/ic_outline_notification"
        android:title="@string/menu_title_notifikasi"/>
    <item
        android:id="@+id/profil_page"
        android:enabled="true"
        android:icon="@drawable/ic_outline_profile"
        android:title="@string/menu_title_profil"/>
</menu>