<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!--  Logo  -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:paddingBottom="50dp"
        android:src="@drawable/mlg_logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_description" />

    <!--  Label and Email field  -->
    <TextView
        android:id="@+id/label_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label_text"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/logo"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_below="@id/label_Email"
        android:hint="@string/email_text_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--  Label and Password Field  -->
    <TextView
        android:id="@+id/lbl_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label_text"
        android:layout_below="@id/txt_email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_Password"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password_text_hint"
        app:endIconMode="password_toggle"
        style="@style/CustomTextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--  Login Button  -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_password"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:text="@string/btn_masuk_text"
        style="@style/roundedCornerButton"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <!--  Register label and Button  -->
        <TextView
            android:id="@+id/lbl_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_reg_hint_text"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_to_reg"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_to_reg_text" />
    </LinearLayout>

</RelativeLayout>