<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/logo_profile_fragment"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/color"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:id="@+id/lbl_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/logo_profile_fragment"
        android:text="@string/lbl_profile_text"
        android:textStyle="bold"
        android:textSize="8pt"/>

    <LinearLayout
        android:id="@+id/group_profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_profile"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/profile_images_text"
            android:src="@drawable/mlg_logo" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/group_profile_info"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/lbl_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/divider2"
        android:text="@string/lbl_pengaturan_text"/>

    <LinearLayout
        android:id="@+id/group_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_settings"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullname_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="full_name" />

    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/group_fullname"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/group_ttl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider3"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tempat, Tanggal Lahir"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ttl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tempat_tanggal_lahir" />
    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/group_ttl"
        android:background="@color/grey"/>

    <LinearLayout
        android:id="@+id/group_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider4"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alamat Rumah"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="alamat_rumah" />
    </LinearLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/group_alamat"
        android:background="@color/grey"/>

    <LinearLayout
        android:id="@+id/group_nohp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider5"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nomor Handphone"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nohp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nomor_handphone" />
    </LinearLayout>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/group_nohp"
        android:background="@color/grey"/>
</RelativeLayout>